[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blockchain-tx-monitor"
version = "0.1.0"
description = "Real-time blockchain transaction monitoring with anomaly detection and forensic analysis"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9",
    "asyncpg>=0.29",
    "rich>=13.7",
    "prometheus-client>=0.20",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "structlog>=24.1",
    "click>=8.1",
    "web3>=6.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "respx>=0.21",
]

[project.scripts]
tx-monitor = "src.main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PTH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70"

[tool.coverage.run]
omit = ["tests/*", "src/main.py"]
